fixed alignment of notes

--- a/static/style.css
+++ b/static/style.css
@@ -81,10 +81,9 @@ ul {
 li {
   padding: 0.5rem 0;
   border-bottom: 1px solid #eee;
-}
-
-li:last-child {
-  border-bottom: none;
+  display: grid;
+  grid-template-columns: 100px auto;
+  align-items: center;
 }
 
 time {
@@ -94,6 +93,7 @@ time {
   color: #666;
   margin-right: 1rem;
   vertical-align: top;
+
 }
 
 .notes {
